--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,11 +29,11 @@ jobs:
         run: dotnet test -c Release --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
 
       - name: Pack prerelease
-        if: "!startsWith(github.ref, 'refs/tags/v')"
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         run: dotnet pack -c Release --no-build --version-suffix build.${{github.run_number}}
 
       - name: Pack release
-        if: "startsWith(github.ref, 'refs/tags/v')"
+        if:  ${{ startsWith(github.ref, 'refs/tags/v') }}
         run: |
           TAG=${{github.ref_name}}
           VERSION=${TAG#v}
@@ -52,20 +52,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: 6.0.x
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 6.0.x
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v3.0.0
+    - name: Download artifacts
+      uses: actions/download-artifact@v3.0.0
 
     #   - name: Pack release
-    #     if: "startsWith(github.ref, 'refs/tags/v')"
+    #     if:  ${{ startsWith(github.ref, 'refs/tags/v') }}
     #     run: |
     #       TAG=${{github.ref_name}}
     #       VERSION=${TAG#v}
     #       dotnet nuget push ./nugetpackage/FuzzySearchNet/bin/Release/FuzzySearch.Net.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_PAT}
 
-        env:
-          NUGET_PAT: ${{ secrets.NUGET_PAT }}
+    #    env:
+    #     NUGET_PAT: ${{ secrets.NUGET_PAT }}
