--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,12 +60,12 @@ jobs:
     - name: Download artifacts
       uses: actions/download-artifact@v3.0.0
 
-    #   - name: Pack release
-    #     if:  ${{ startsWith(github.ref, 'refs/tags/v') }}
-    #     run: |
-    #       TAG=${{github.ref_name}}
-    #       VERSION=${TAG#v}
-    #       dotnet nuget push ./nugetpackage/FuzzySearchNet/bin/Release/FuzzySearch.Net.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_PAT}
+    - name: Pack release
+      if:  ${{ startsWith(github.ref, 'refs/tags/v') }}
+      run: |
+          TAG=${{github.ref_name}}
+          VERSION=${TAG#v}
+          dotnet nuget push ./nugetpackage/DataLakeFileSystemClientExtension/bin/Release/vforteli.DataLakeClientExtensions.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_PAT}
 
-    #    env:
-    #     NUGET_PAT: ${{ secrets.NUGET_PAT }}
+      env:
+        NUGET_PAT: ${{ secrets.NUGET_PAT }}
