--- a/DataLakeFileSystemClientExtension/DataLakeFileSystemClientExtension.csproj
+++ b/DataLakeFileSystemClientExtension/DataLakeFileSystemClientExtension.csproj
@@ -1,11 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>    
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
+
+   <PropertyGroup>
+    <PackageId>vforteli.DataLakeClientExtensions</PackageId>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <Title>DataLakeClientExtensions</Title>
+    <Authors>Verner Fortelius</Authors>
+    <Description>Extension method for recursively listing paths in Azure DataLake with multiple threads</Description>
+    <Copyright>Copyright 2023 Verner Fortelius</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/vforteli/DataLakeFileSystemClientExtension</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/vforteli/DataLakeFileSystemClientExtension</RepositoryUrl>
+    <PackageLicense>https://github.com/vforteli/DataLakeFileSystemClientExtension/blob/main/LICENSE.md</PackageLicense>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageTags>azure datalake list paths directories recursive</PackageTags>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="/"/>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Files.DataLake" Version="12.14.0" />    
