switch from blockingcollection to channels so we dont have to block threads

--- a/DataLakeFileSystemClientExtension/DataLakeFileSystemClientExtension.csproj
+++ b/DataLakeFileSystemClientExtension/DataLakeFileSystemClientExtension.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -9,7 +9,7 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<PackageId>vforteli.DataLakeClientExtensions</PackageId>
-		<VersionPrefix>0.1.0</VersionPrefix>
+		<VersionPrefix>0.2.0</VersionPrefix>
 		<Title>DataLakeClientExtensions</Title>
 		<Authors>Verner Fortelius</Authors>
 		<Description>Extension method for recursively listing paths in Azure DataLake with multiple threads</Description>
@@ -18,7 +18,7 @@
 		<PackageProjectUrl>https://github.com/vforteli/DataLakeFileSystemClientExtension</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/vforteli/DataLakeFileSystemClientExtension</RepositoryUrl>
 		<PackageLicense>https://github.com/vforteli/DataLakeFileSystemClientExtension/blob/main/LICENSE.md</PackageLicense>
-		<PackageReleaseNotes>Initial release</PackageReleaseNotes>
+		<PackageReleaseNotes>Switch from BlockingCollection to Channel</PackageReleaseNotes>
 		<PackageTags>azure datalake list paths directories recursive</PackageTags>
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
